fix: changes styles fot catalog

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -986,6 +986,24 @@
                     <span>iPhone SE</span>
                   </a>
                 </li>
+                <li>
+                  <a class="uk-flex uk-flex-column" href="#">
+                    <div>
+                      <img src="img/pic/bg/header-catalog-9.jpg" alt="">
+                    </div>
+                    <span>от&nbsp;50&nbsp;000&nbsp;&#8381;</span>
+                    <span>iPhone 6</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="uk-flex uk-flex-column" href="#">
+                    <div>
+                      <img src="img/pic/bg/header-catalog-9.jpg" alt="">
+                    </div>
+                    <span>от&nbsp;50&nbsp;000&nbsp;&#8381;</span>
+                    <span>iPhone 5S</span>
+                  </a>
+                </li>
               </ul>
             </li>
             <li>
@@ -1007,8 +1025,8 @@
 
         <div id="popupSearch" class="popup popup--search" uk-modal>
           <div class="uk-modal-dialog uk-modal-body">
-            <input id="searchInput" type="text" placeholder="Поиск по каталогу" pattern=".{0}"
-              value="" autocomplete="new-password">
+            <input id="searchInput" type="text" placeholder="Поиск по каталогу" pattern=".{0}" value=""
+              autocomplete="new-password">
 
             <div class="search__close-wrap">
               <button class="search__close" type="button">
