--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -338,8 +338,12 @@
     }
 
     @media (min-width: 1250px) {
+      .uk-grid {
+        margin-left: -6px;
+      }
+
       .uk-grid>* {
-        padding-left: 17px;
+        padding-left: 15px;
       }
     }
 
@@ -434,6 +438,13 @@
 
     &-list {
       a {
+        width: 100%;
+        height: 100%;
+        max-width: 138px;
+        max-height: 225px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         padding: 19px;
         text-align: center;
         border-radius: 20px;
@@ -456,9 +467,9 @@
       }
 
       div {
-        margin-bottom: 10px;
-        width: 120px;
-        height: 120px;
+        margin: 0 auto 10px auto;
+        width: 100px;
+        height: 100px;
       }
 
       span {
@@ -469,6 +480,15 @@
         &:first-of-type {
           font: 400 12px/20px FuturaPT;
           color: rgb(190, 190, 194);
+        }
+
+        &:last-of-type {
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          -webkit-line-clamp: 2;
+          max-width: 100px;
         }
       }
     }
