--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -141,8 +141,8 @@
         display: -webkit-box;
         -webkit-box-orient: vertical;
         overflow: hidden;
-        text-overflow: ellipsis;
-        -webkit-line-clamp: 2;
+       /*  text-overflow: ellipsis; */
+       /*  -webkit-line-clamp: 2; */
         max-height: 50px;
         margin-bottom: 15px;
         color: #30373D;
