feature: changes button search close on span

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1029,11 +1029,11 @@
               autocomplete="new-password">
 
             <div class="search__close-wrap">
-              <button class="search__close" type="button">
+              <span class="search__close">
                 <svg width="24" height="24">
                   <use xlink:href="img/symbol/sprite.svg#close" />
                 </svg>
-              </button>
+              </span>
             </div>
 
             <ul class="search__result">
