fix: changes position for header bottom sublist after

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -633,7 +633,7 @@
           content: "";
           position: absolute;
           z-index: 20;
-          top: -20px;
+          top: 0;
           height: 40px;
           width: 100%;
           background: transparent;
