--- a/src/components/head.html
+++ b/src/components/head.html
@@ -8,4 +8,5 @@
   <title>Document</title>
   <link rel="stylesheet" href="styles/main.min.css" />
   <script defer src="js/jquery.min.js"></script>
+  <script src="js/library.min.js"></script>
 </head>
