--- a/src/components/head.html
+++ b/src/components/head.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Document</title>
   <link rel="stylesheet" href="styles/main.min.css" />
-  <script defer src="js/jquery.min.js"></script>
+  <script src="js/jquery.min.js"></script>
   <script src="js/library.min.js"></script>
+  <script src="js/scripts.min.js"></script>
 </head>
