--- a/src/sass/components/_search.scss
+++ b/src/sass/components/_search.scss
@@ -37,13 +37,13 @@
 	}
 
 	input {
-		padding: 10px 20px;
+		padding: 10px 40px 10px 20px;
 		width: 100%;
 		border-radius: 8px;
 		border: 1px solid transparent;
 		background: url("../img/pic/ico/search-ico.svg") no-repeat, rgba(239, 239, 240, .6);
 		background-size: 18px 18px;
-		background-position: 700px;
+		background-position: 730px;
 
 		&::placeholder {
 			font: normal 15px/18px FuturaPT;
