--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -16,34 +16,57 @@
       <span>&copy; 2013-2018 Продажа iPhone в СПб</span>
     </div>
 
-    <div class="footer__menu uk-padding-large-top@l">
-      <span class="footer__subtitle">Меню</span>
-      <ul class="uk-flex uk-child-width-1-2 uk-child-width-1-1 uk-flex-wrap uk-flex-column@l">
-        <li>
-          <a href="#">Главная</a>
-        </li>
-        <li>
-          <a href="#">Каталог</a>
-        </li>
-        <li>
-          <a href="#">Гарантия</a>
-        </li>
-        <li>
-          <a href="#">Доставка и оплата</a>
-        </li>
-        <li>
-          <a href="#">Кредит</a>
-        </li>
-        <li>
-          <a href="#">Новости</a>
-        </li>
-        <li>
-          <a href="#">Отзывы</a>
-        </li>
-        <li>
-          <a href="#">Контакты</a>
-        </li>
-      </ul>
+    <div class="footer__menu uk-padding-large-top@l uk-child-width-1-2@l">
+      <div class="footer__menu-container uk-flex uk-flex-column">
+        <span class="footer__subtitle">Меню</span>
+        <ul class="uk-flex uk-child-width-1-2 uk-child-width-1-1 uk-flex-wrap uk-flex-column@l">
+          <li>
+            <a href="#">Главная</a>
+          </li>
+          <li>
+            <a href="#">Каталог</a>
+          </li>
+          <li>
+            <a href="#">Гарантия</a>
+          </li>
+          <li>
+            <a href="#">Доставка и оплата</a>
+          </li>
+          <li>
+            <a href="#">Кредит</a>
+          </li>
+          <li>
+            <a href="#">Новости</a>
+          </li>
+          <li>
+            <a href="#">Отзывы</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__menu-container uk-flex uk-flex-column">
+        <span class="footer__subtitle">Категории</span>
+        <ul class="uk-flex uk-child-width-1-2 uk-child-width-1-1 uk-flex-wrap uk-flex-column@l">
+          <li>
+            <a href="#">Iphone</a>
+          </li>
+          <li>
+            <a href="#">iPad</a>
+          </li>
+          <li>
+            <a href="#">MacBook и iMac</a>
+          </li>
+          <li>
+            <a href="#">Watch</a>
+          </li>
+          <li>
+            <a href="#">Аксессуары</a>
+          </li>
+        </ul>
+      </div>
     </div>
 
     <div class="footer__contacts uk-padding-large-top@l uk-flex uk-flex-column">
@@ -201,6 +224,13 @@
             <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
           </div>
         </div>
+
+        <button class="product-card__close">
+          <svg width="16" height="16">
+            <use xlink:href="img/symbol/sprite.svg#close"></use>
+          </svg>
+        </button>
+        
       </div>
       <button class="btn" type="button">Оформить заказ</button>
       <button class="btn btn--gray uk-margin-top" type="button">Продолжить покупки</button>
