--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -63,7 +63,14 @@
     }
 
     @include screen(l) {
-      padding-left: 115px;
+      display: flex;
+      padding-left: 40px;
+    }
+
+    &-container {
+      @include screen(l) {
+        padding: 0 10px;
+      }
     }
 
     .footer__subtitle {
@@ -92,6 +99,10 @@
 
     li:not(:last-of-type) {
       margin-bottom: 15px;
+    }
+
+    li {
+      width: 100%;
     }
   }
 
