feature: adds script for presents, adds style for danger text in validation

--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -430,6 +430,7 @@ select {
   list-style: none;
 }
 
-/* #mfilter-content-container {
-  display: flex;
-} */
+.text-danger,
+.alert-error {
+  color: #FF548C;
+}
