--- a/src/sass/layout/_product.scss
+++ b/src/sass/layout/_product.scss
@@ -461,6 +461,13 @@
       box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
       border-radius: 10px;
     }
+
+    &-label {
+      &--disable {
+        opacity: .5;
+        pointer-events: none;
+      }
+    }
   }
 
   /* swiper-gallery */
