--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -1,6 +1,8 @@
 .product-card {
   &--default {
     padding: 20px 5px 5px 5px;
+    min-height: 492px;
+    min-width: 290px;
     border-radius: 20px;
     background-color: #FFFFFF;
     overflow: hidden;
@@ -19,6 +21,7 @@
         margin: 0 auto;
         max-width: 100%;
         max-height: 275px;
+        min-height: 275px;
         mix-blend-mode: darken;
       }
     }
@@ -34,7 +37,7 @@
       padding-left: 15px;
       margin-bottom: 10px;
       font: 500 22px/28px FuturaPT;
-      color: #30373D; 
+      color: #30373D;
     }
 
     .product-card__price {
@@ -143,8 +146,8 @@
         overflow: hidden;
         width: 100%;
         padding-right: 30px;
-       /*  text-overflow: ellipsis; */
-       /*  -webkit-line-clamp: 2; */
+        /*  text-overflow: ellipsis; */
+        /*  -webkit-line-clamp: 2; */
         max-height: 50px;
         margin-bottom: 15px;
         color: #30373D;
