--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -56,6 +56,11 @@
   }
 
   &__menu {
+    @include screen(sm) {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
     @include screen(xl) {
       margin-bottom: 40px;
       padding: 0 15px 20px;
@@ -68,8 +73,18 @@
     }
 
     &-container {
+      @include screen(sm) {
+        width: 50%;
+      }
+
       @include screen(l) {
         padding: 0 10px;
+      }
+
+      &:last-of-type {
+        @include screen(x) {
+          margin-top: 20px;
+        }
       }
     }
 
