--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -13,15 +13,18 @@
     }
 
     .product-card__image {
+      display: flex;
       margin-bottom: 25px;
+      max-height: 275px;
+      min-height: 275px;
       text-align: center;
       padding: 0 15px;
 
       img {
-        margin: 0 auto;
+        margin: auto;
         max-width: 100%;
+        height: auto;
         max-height: 275px;
-        min-height: 275px;
         mix-blend-mode: darken;
       }
     }
