--- a/src/sass/components/_cart.scss
+++ b/src/sass/components/_cart.scss
@@ -4,23 +4,23 @@
 		min-width: 230px;
 		max-width: 230px;
 		border-radius: 8px;
-		background: #6344B6;
-		box-shadow: 0px 4px 12px rgba(107, 72, 169, 0.4);
+		background: $second-color;
+		box-shadow: 0px 4px 12px $second-color-opacity-4;
 		cursor: pointer;
 		transition: background-color .3s, box-shadow .3s;
 	}
 
 	&:hover {
 		@include screen(l) {
-			background: rgb(103, 60, 221);
-			box-shadow: 0px 4px 15px rgba(107, 72, 169, 0.7);
+			background: $second-dark-color;
+			box-shadow: 0px 4px 15px $second-color-opacity-7;
 		}
 	}
 
 	&--active {
 		@include screen(l) {
-			background: rgb(103, 60, 221);
-			box-shadow: 0px 4px 15px rgba(107, 72, 169, 0.7);
+			background: $second-dark-color;
+			box-shadow: 0px 4px 15px $second-color-opacity-7;
 		}
 	}
 
@@ -43,7 +43,7 @@
 		@include screen(l) {
 			position: relative;
 			display: block;
-			color: #ffffff;
+			color: $white;
 			text-transform: uppercase;
 		}
 
@@ -69,7 +69,7 @@
 					top: 0;
 					width: 1px;
 					height: 100%;
-					background: rgba(0, 0, 0, .2);
+					background: $black-opacity-2;
 				}
 			}
 		}
@@ -79,7 +79,7 @@
 		@include screen(xl) {
 			display: flex;
 			padding: 0 30px 0 30px;
-			border-left: 1px solid rgba(0, 0, 0, .1);
+			border-left: 1px solid $black-opacity-1;
 			width: 24px;
 			height: 40px;
 			background: url('../img/pic/ico/cart-icon.svg') no-repeat;
@@ -87,7 +87,7 @@
 			background-position: 15px center;
 		}
 
-		&--active {
+		/* &--active {
 			@include screen(xl) {
 				position: relative;
 				background: url('../img/pic/ico/cart-icon2.svg') no-repeat;
@@ -96,18 +96,18 @@
 			}
 
 			&::after {
-				content: "";
+				content: "1";
 				position: absolute;
 				top: 0;
 				right: 6px;
 				width: 17px;
 				height: 17px;
 				border-radius: 50%;
-				color: #ffffff;
+				color: $white;
 				font: 600 11px/13px Roboto;
-				background: #FF548C;
-				border: 2px solid #FFFFFF;
+				background: $main-color;
+				border: 2px solid $white;
 			}
-		}
+		} */
 	}
 }
