--- a/src/sass/components/_dotted-list.scss
+++ b/src/sass/components/_dotted-list.scss
@@ -14,7 +14,7 @@
 			top: 9px;
 			width: 7px;
 			height: 7px;
-			background-color: #FF548C;
+			background-color: $main-color;
 			border-radius: 50%;
 		}
 	}
