--- a/src/sass/components/_main-banner.scss
+++ b/src/sass/components/_main-banner.scss
@@ -3,7 +3,7 @@
 
   @include screen(xl) {
     padding: 15px 0 0 0;
-    background: rgb(248, 248, 248);
+    background: $gray-light;
   }
 
   @include screen(l) {
@@ -18,7 +18,7 @@
     }
 
     @include screen(l) {
-      box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.05);
+      box-shadow: 0px 2px 24px $black-opacity-05;
       border-radius: 20px;
     }
   }
@@ -32,7 +32,7 @@
       padding: 25px 15px 0;
       width: 90% !important;
       height: 450px;
-      box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.05);
+      box-shadow: 0px 2px 24px $black-opacity-05;
       border-radius: 20px;
     }
 
@@ -44,7 +44,7 @@
     p {
       position: relative;
       z-index: 1;
-      color: #ffffff;
+      color: $white;
 
       &:nth-of-type(1) {
         @include screen(xl) {
@@ -69,7 +69,7 @@
     }
 
     &.slide-1 {
-      background-color: #000000;
+      background-color: $black;
 
       img {
         @include screen(xl) {
@@ -95,7 +95,7 @@
     }
 
     &.slide-2 {
-      background-color: #000000;
+      background-color: $black;
 
       img {
         @include screen(xl) {
@@ -120,7 +120,7 @@
     }
 
     &.slide-3 {
-      background-color: #fafafa;
+      background-color: $gray-light-3;
 
       img {
         @include screen(xl) {
@@ -144,12 +144,12 @@
       }
 
       p {
-        color: #30373D;
+        color: $main-black-color;
       }
     }
 
     &.slide-4 {
-      background-color: #fafafa;
+      background-color: $gray-light-3;
 
       img {
         @include screen(xl) {
@@ -173,12 +173,12 @@
       }
 
       p {
-        color: #30373D;
+        color: $main-black-color;
       }
     }
 
     &.slide-5 {
-      background-color: #fafafa;
+      background-color: $gray-light-3;
 
       img {
         @include screen(xl) {
@@ -202,7 +202,7 @@
       }
 
       p {
-        color: #30373D;
+        color: $main-black-color;
       }
     }
 
