--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -10,7 +10,7 @@ body {
   font: normal 14px/26px Roboto, sans-serif;
   font-weight: normal;
   background-color: #ffffff;
-  color: rgba(48, 55, 61, .9);
+  color: $main-black-color-opacity-9;
   overflow-x: hidden;
 }
 
@@ -40,7 +40,7 @@ button {
     height: 100%;
     width: 100vw;
     z-index: -1;
-    background-color: rgb(248, 248, 248);
+    background-color: $gray-light;
   }
 }
 
@@ -59,7 +59,7 @@ button {
     height: 100%;
     width: 100vw;
     z-index: -1;
-    background-color: #ffffff;
+    background-color: $white;
   }
 }
 
@@ -80,7 +80,7 @@ button {
     z-index: -1;
 
     @include screen(xl) {
-      background-color: rgb(248, 248, 248);
+      background-color: $gray-light;
     }
 
     @include screen(l) {
@@ -93,7 +93,7 @@ button {
   display: block;
 
   &--small {
-    color: #30373D;
+    color: $main-black-color;
 
     @include screen(xl) {
       font: 500 28px/33px FuturaPT;
@@ -105,7 +105,7 @@ button {
   }
 
   &--medium {
-    color: #30373D;
+    color: $main-black-color;
 
     @include screen(xl) {
       font: 500 28px/33px FuturaPT;
@@ -121,7 +121,7 @@ button {
   position: relative;
   padding-right: 30px;
   font: 500 16px/22px FuturaPT;
-  color: #D63469;
+  color: $main-dark-color-2;
   transition: transform .3s;
   /* чинит текст который скачет при scale */
   backface-visibility: hidden;
@@ -143,16 +143,16 @@ button {
 /* subnav */
 .breadcrumbs {
   &.uk-subnav>*> :first-child {
-    color: rgba(51, 51, 51, .8) !important;
+    color: $dark-gray-opacity-8 !important;
     font: normal 14px/16px FuturaPT !important;
     text-transform: none !important;
   }
 
   &.uk-subnav>.uk-active>a {
-    color: rgba(51, 51, 51, .4) !important;
+    color: $dark-gray-opacity-4 !important;
 
     &:hover {
-      color: rgba(51, 51, 51, .8) !important;
+      color: $dark-gray-opacity-8 !important;
     }
   }
 
@@ -174,9 +174,9 @@ button {
 
 .nice-select {
   min-width: 215px !important;
-  background: #FFFFFF !important;
-  border: 1px solid #E7E7E7 !important;
-  box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05) !important;
+  background: $white !important;
+  border: 1px solid $gray-2 !important;
+  box-shadow: 0px 2px 7px $black-opacity-05 !important;
   border-radius: 10px !important;
 
   &::after {
@@ -187,8 +187,8 @@ button {
     margin: auto !important;
     height: 8px !important;
     width: 8px !important;
-    border-bottom: 2px solid #F8355E !important;
-    border-right: 2px solid #F8355E !important;
+    border-bottom: 2px solid $main-dark-color !important;
+    border-right: 2px solid $main-dark-color !important;
     pointer-events: none;
     position: absolute;
     transform-origin: 66% 66%;
@@ -203,7 +203,7 @@ button {
     min-height: auto !important;
     padding: 5px 15px !important;
     font: inherit !important;
-    color: #30373D !important;
+    color: $main-black-color !important;
 
     & li {
       cursor: pointer;
@@ -233,8 +233,6 @@ button {
   }
 }
 
-/* uk-light-box */
-
 .uk-lightbox {
   background: transparent !important;
   backdrop-filter: blur(5px);
@@ -257,7 +255,7 @@ button {
   bottom: 0;
   right: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, .2);
+  background-color: $black-opacity-2;
 }
 
 .search--opened {
@@ -270,8 +268,7 @@ button {
   }
 
   .search input {
-    /* border: 1px solid #FF548C; */
-    box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 24px $black-opacity-1;
     background: url("../img/pic/ico/search-ico-pink.svg") no-repeat, #FFFFFF;
     background-size: 18px 18px;
     background-position: 730px;
@@ -329,10 +326,7 @@ button {
 
   .backdrop {
     display: block;
-    /*  background: rgba(255, 255, 255, .3); */
     backdrop-filter: blur(5px);
-    /* filter: url('#blur');
-    filter: blur(5px); */
 
     &::before {
       content: '';
@@ -371,7 +365,7 @@ select {
   height: 50px;
   text-align: center;
   border-radius: 4px;
-  border: 1px solid #F8355E;
+  border: 1px solid $main-dark-color;
   background-color: transparent;
   opacity: 0;
   visibility: hidden;
@@ -401,7 +395,7 @@ select {
 
   &:hover {
     cursor: pointer;
-    background-color: #F8355E;
+    background-color: $main-dark-color;
 
     &::after {
       background: url('../img/pic/ico/arrow-white.svg') no-repeat !important;
@@ -409,7 +403,7 @@ select {
   }
 
   &:active {
-    background-color: #F8355E;
+    background-color: $main-dark-color;
 
     &::after {
       background: url('../img/pic/ico/arrow-white.svg') no-repeat !important;
@@ -432,5 +426,24 @@ select {
 
 .text-danger,
 .alert-error {
-  color: #FF548C;
+  color: $main-color;
+}
+
+/* для корзины в header-mobile */
+.new2 {
+  position: absolute;
+  top: 0;
+  right: 6px;
+  width: 17px;
+  height: 17px;
+  border-radius: 50%;
+  color: $white;
+  font: 600 11px/13px Roboto;
+  background: $main-color;
+  border: 2px solid $white;
+}
+
+/* Смена шрифта для вопросительного знака */
+.question-mark {
+  font-family: 'Roboto';
 }
