--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -16,9 +16,9 @@
     text-align: center;
     text-transform: uppercase;
     font: 600 15px/22px FuturaPT;
-    color: #F8355E;
+    color: $main-dark-color;
     border-radius: 8px;
-    background-color: #ffffff;
+    background-color: $white;
     transition: box-shadow .3s, color .1s, background-color .3s, border .3s;
 
     @include screen(xl) {
@@ -36,7 +36,7 @@
   }
 
   &--pink {
-    background: linear-gradient(250.77deg, #ED656C 0%, #DF5C91 99.52%);
+    background: $gradient-pink;
 
     @include screen(x) {
       margin-bottom: 20px;
@@ -55,16 +55,6 @@
       padding: 40px 50px;
       margin-right: 20px;
     }
-
-    /*  &:after {
-      position: absolute;
-      content: "";
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 40px;
-      background: linear-gradient(0deg, rgba(237, 100, 110, 0.0001) 0%, #ED646E 100%);
-    } */
 
     img {
       &:first-of-type {
@@ -95,7 +85,7 @@
     p {
       position: relative;
       z-index: 1;
-      color: #ffffff;
+      color: $white;
     }
 
     a {
@@ -103,29 +93,29 @@
       z-index: 1;
 
       &:hover {
-        color: #ffffff;
-        background-color: #FF548C;
-        box-shadow: 0px 3px 10px rgba(255, 84, 140, 0.4);
-        border-color: #ffffff;
+        color: $white;
+        background-color: $main-color;
+        box-shadow: 0px 3px 10px $main-color-opacity-4;
+        border-color: $white;
       }
     }
   }
 
   &--white {
     padding: 30px 50px 40px;
-    background-color: #ffffff;
+    background-color: $white;
 
     @include screen(xl) {
       height: 390px;
     }
 
     a {
-      border: 1px solid #F8355E;
+      border: 1px solid $main-dark-color;
 
       &:hover {
-        color: #ffffff;
-        background-color: #FF548C;
-        box-shadow: 0px 3px 10px rgba(255, 84, 140, 0.4);
+        color: $white;
+        background-color: $main-color;
+        box-shadow: 0px 3px 10px $main-color-opacity-4;
         border-color: transparent;
       }
     }
