--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -3,14 +3,14 @@
 	width: 100%;
 	text-align: center;
 	font-family: FuturaPT;
-	color: #ffffff;
-	background-color: #FF548C;
+	color: $white;
+	background-color: $main-color;
 	border-radius: 8px;
 	transition: background-color .3s, box-shadow .3s, color .1s;
 	overflow: hidden;
 
 	&:hover {
-		background-color: #F8355E;
-		box-shadow: 0px 6px 30px rgba(248, 53, 94, 0.4);
+		background-color: $main-dark-color;
+		box-shadow: 0px 6px 30px $main-color-opacity-4;
 	}
 }
