--- a/src/sass/components/_calc.scss
+++ b/src/sass/components/_calc.scss
@@ -2,23 +2,22 @@
   &__subtitle {
     margin-bottom: 15px;
     font: 600 14px/18px FuturaPT;
-    color: #2B2D30;
+    color: $third-black-color;
   }
 
   &__result {
     margin-right: 30px;
     font: 500 48px/59px Helvetica;
-    color: #333333;
+    color: $second-black-color;
   }
 
   &__info {
     padding-top: 10px;
     font: normal 12px/16px FuturaPT;
-    color: rgba(51, 51, 51, .5);
+    color: $second-black-color-opacity-5;
   }
 
   &__range {
-
     &-wrap {
       position: relative;
       font: 500 18px/22px Helvetica;
@@ -40,7 +39,7 @@
         width: 100%;
         height: 4px;
         cursor: pointer;
-        background: #DEDEDE;
+        background: $gray;
         border-radius: 2px;
         border: none;
         z-index: 2;
@@ -50,8 +49,8 @@
         width: 30px;
         height: 50px;
         border-radius: 6px;
-        border: 1px solid #E9EBEF;
-        background-color: #FF548C;
+        border: 1px solid $gray-4;
+        background-color: $main-color;
         cursor: pointer;
         -webkit-appearance: none;
         margin-top: -25px;
@@ -62,7 +61,7 @@
         width: 100%;
         height: 4px;
         cursor: pointer;
-        background: #DEDEDE;
+        background: $gray;
         border-radius: 2px;
         border: none;
         z-index: 2;
@@ -72,8 +71,8 @@
         width: 30px;
         height: 50px;
         border-radius: 6px;
-        border: 1px solid #E9EBEF;
-        background-color: #FF548C;
+        border: 1px solid $gray-4;
+        background-color: $main-color;
         cursor: pointer;
         -webkit-appearance: none;
         margin-top: -25px;
@@ -84,7 +83,7 @@
         width: 100%;
         height: 4px;
         cursor: pointer;
-        background: #DEDEDE;
+        background: $gray;
         border-radius: 2px;
         border: none;
         z-index: 2;
@@ -94,8 +93,8 @@
         width: 32px;
         height: 50px;
         border-radius: 6px;
-        border: 1px solid #E9EBEF;
-        background-color: #FF548C;
+        border: 1px solid $gray-4;
+        background-color: $main-color;
         cursor: pointer;
         -webkit-appearance: none;
         margin-top: -25px;
@@ -111,7 +110,7 @@
       margin-left: 1.76471px;
       text-align: center;
       pointer-events: none;
-      color: #ffffff;
+      color: $white;
       z-index: 2;
 
       &::after {
@@ -120,14 +119,13 @@
         top: 12px;
         left: 6px;
         font-size: 25px;
-        color: rgba(0, 0, 0, .45);
+        color: $black-opacity-45;
       }
     }
 
     &-items {
       position: relative;
       font-size: 0;
-      /* z-index: -1; */
     }
 
     &-item {
@@ -146,7 +144,7 @@
         width: 4px;
         height: 4px;
         border-radius: 50%;
-        background-color: #D8DCE2;
+        background-color: $gray-5;
       }
 
       &:first-child {
