--- a/src/sass/components/_feature.scss
+++ b/src/sass/components/_feature.scss
@@ -5,8 +5,8 @@
     height: 100px;
     border-radius: 50%;
     overflow: hidden;
-    border: 4px solid #FFFFFF;
-    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.1);
+    border: 4px solid $white;
+    box-shadow: 0px 2px 7px $black-opacity-1;
 
     &::after {
       content: "";
@@ -28,7 +28,7 @@
       margin: auto;
       width: 50px;
       height: 50px;
-      fill: #ffffff;
+      fill: $white;
       z-index: 1;
     }
   }
@@ -36,7 +36,7 @@
   &--blue {
     div {
       &::after {
-        background: linear-gradient(360deg, rgb(0, 149, 255) 0%, rgb(106, 225, 248) 99.86%);
+        background: $gradient-blue;
 
       }
     }
@@ -45,7 +45,7 @@
   &--green {
     div {
       &::after {
-        background: linear-gradient(180deg, rgb(160, 245, 154) 0%, rgb(42, 190, 122) 100%);
+        background: $gradient-green;
       }
     }
   }
@@ -53,7 +53,7 @@
   &--yellow {
     div {
       &::after {
-        background: linear-gradient(360deg, rgb(255, 180, 38) 0.22%, rgb(255, 222, 92) 100%);
+        background: $gradient-yellow;
       }
     }
   }
@@ -61,7 +61,7 @@
   &--violet {
     div {
       &::after {
-        background: linear-gradient(180deg, rgb(235, 197, 255) 0%, rgb(188, 74, 216) 98.04%);
+        background: $gradient-violet;
       }
     }
   }
@@ -69,7 +69,7 @@
   &--pink {
     div {
       &::after {
-        background: linear-gradient(360deg, rgb(241, 49, 103) 0%, rgb(247, 149, 201) 99.86%);
+        background: $gradient-pink-2;
       }
     }
   }
@@ -77,7 +77,7 @@
   &--green {
     div {
       &::after {
-        background: linear-gradient(180deg, rgb(160, 245, 154) 0%, rgb(42, 190, 122) 100%);
+        background: $gradient-green;
       }
     }
   }
