--- a/src/sass/components/_filter.scss
+++ b/src/sass/components/_filter.scss
@@ -5,8 +5,8 @@
     border-radius: none;
 
     &>li {
-      background: #FFFFFF;
-      box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
+      background: $white;
+      box-shadow: 0px 2px 7px $black-opacity-05;
       border-radius: 20px;
       overflow: hidden;
     }
@@ -48,67 +48,67 @@
 
     input:checked+label::after {
       border-radius: 10px;
-      border: 4px solid #FF548C;
+      border: 4px solid $main-color;
     }
 
     .filter__color {
       &--black {
         input+label::after {
-          background: linear-gradient(180deg, rgb(98, 98, 98) 0%, rgb(51, 51, 51) 100%);
+          background: $gradient-black
         }
       }
 
       &--orange {
         input+label::after {
-          background: linear-gradient(180deg, rgb(255, 143, 45) 0%, rgb(255, 86, 20) 100%);
+          background: $gradient-orange;
         }
       }
 
       &--violet {
         input+label::after {
-          background: linear-gradient(180deg, rgb(250, 156, 222) 0%, rgb(242, 99, 186) 100%);
+          background: $gradient-vioelt-2;
         }
       }
 
       &--white {
         input+label::after {
-          background: linear-gradient(180deg, rgb(249, 249, 249) 0%, rgb(240, 240, 240) 100%);
+          background: $gradient-white;
         }
       }
 
       &--turquoise {
         input+label::after {
-          background: linear-gradient(180deg, rgb(118, 241, 211) 0%, rgb(65, 224, 168) 100%);
+          background: $gradient-turquoise;
         }
       }
 
       &--pearl {
         input+label::after {
-          background: linear-gradient(180deg, rgb(239, 239, 239) 0%, rgb(199, 212, 240) 32.17%, rgb(255, 209, 201) 59.58%, rgb(242, 252, 205) 80.73%, rgb(198, 232, 246) 100%);
+          background: $gradient-pearl;
         }
       }
 
       &--gray {
         input+label::after {
-          background: linear-gradient(180deg, rgb(189, 189, 189) 0%, rgb(136, 136, 136) 100%);
+          background: $gradient-gray;
         }
       }
 
       &--blue {
         input+label::after {
-          background: linear-gradient(360deg, rgb(32, 106, 255) 0%, rgb(0, 255, 249) 100%);
+          background: $graident-blue-2;
         }
       }
 
       &--green {
         input+label::after {
-          background: linear-gradient(180deg, rgb(45, 237, 150) 0%, rgb(20, 215, 93) 100%);
+          background: $gradient-green-2;
         }
       }
 
       &--red {
         input+label::after {
-          background: linear-gradient(180deg, rgb(255, 153, 153) 0%, rgb(255, 96, 96) 100%);
+          background: $gradient-red;
         }
       }
     }
@@ -133,7 +133,7 @@
       position: relative;
       cursor: pointer;
       font: normal 14px/19px Roboto;
-      color: #30373D;
+      color: $main-black-color;
     }
 
     input+label::after {
@@ -146,8 +146,8 @@
       width: 20px;
       height: 20px;
       border-radius: 4px;
-      background-color: #ffffff;
-      border: 2px solid #E3E3E3;
+      background-color: $white;
+      border: 2px solid $gray-9;
     }
 
     input:checked+label::before {
@@ -173,14 +173,14 @@
       cursor: pointer;
       border-radius: 20px;
       font: 500 16px/19px Roboto;
-      color: #333333;
+      color: $second-black-color;
       background: transparent;
       transition: color .15s, background-color .3s;
     }
 
     input:checked+label {
-      color: #ffffff;
-      background: #2C0952;
+      color: $white;
+      background: $third-color;
     }
   }
 
@@ -192,14 +192,14 @@
       cursor: pointer;
       border-radius: 20px;
       font: 500 16px/19px Roboto;
-      color: #333333;
+      color: $second-black-color;
       background: transparent;
       transition: color .15s, background-color .3s;
     }
 
     input:checked+label {
-      color: #ffffff;
-      background: #2C0952;
+      color: $white;
+      background: $third-color;
     }
   }
 
@@ -208,7 +208,7 @@
     transition: color .15s;
 
     &:hover {
-      color: #FF548C;
+      color: $main-color;
     }
   }
 }
