--- a/src/sass/components/_frame.scss
+++ b/src/sass/components/_frame.scss
@@ -1,6 +1,6 @@
 .frame {
-  box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.1);
-  background-color: #ffffff;
+  box-shadow: 0px 2px 30px $black-opacity-1;
+  background-color: $white;
   overflow: hidden;
 
   @include screen(xl) {
