--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -14,20 +14,20 @@
       padding: 11px 15px;
       border-radius: 20px;
       font: 500 16px/28px FuturaPT;
-      color: #2C0952;
-      background-color: #F8F8F8;
+      color: $third-color;
+      background-color: $gray-light;
       transition: background-color .3s, color .1s;
 
       &-light {
-        background-color: #ffffff;
+        background-color: $white;
       }
 
       &:hover {
-        background-color: #2C0952;
-        color: #ffffff;
+        background-color: $third-color;
+        color: $white;
 
         svg {
-          fill: #ffffff;
+          fill: $white;
           transform: rotate(360deg);
         }
       }
@@ -44,7 +44,7 @@
           margin: auto;
           width: 16px;
           height: 16px;
-          fill: #2C0952;
+          fill: $third-color;
           transition: fill .1s, transform .5s cubic-bezier(0.39, 0.575, 0.565, 1);
         }
       }
@@ -52,36 +52,36 @@
 
     &--small {
       font: 500 16px/19px FuturaPT;
-      color: #30373D;
-      background-color: #E9E9E9;
+      color: $main-black-color;
+      background-color: $gray-7;
       border-radius: 10px;
 
       &:hover {
         color: #ffffff;
-        background: #2C0952;
-        box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
+        background: $third-color;
+        box-shadow: 0px 2px 7px $black-opacity-05;
       }
     }
 
     &--active {
-      background: #2C0952;
-      color: #ffffff;
+      background: $third-color;
+      color: $white;
     }
 
     &--prev,
     &--next {
       position: relative;
-      background-color: #F8F8F8;
+      background-color: $gray-light;
       border-radius: 10px;
       cursor: pointer;
 
       &-light {
-        background-color: #fff;
+        background-color: $white;
       }
 
       &:hover {
-        background-color: #2C0952;
-        box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
+        background-color: $third-color;
+        box-shadow: 0px 2px 7px $black-opacity-05;
       }
 
       svg {
