--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -4,12 +4,12 @@
     min-height: 492px;
     min-width: 290px;
     border-radius: 20px;
-    background-color: #FFFFFF;
+    background-color: $white;
     overflow: hidden;
     transition: box-shadow .3s;
 
     &:hover {
-      box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.2);
+      box-shadow: 0px 2px 15px $black-opacity-2;
     }
 
     .product-card__image {
@@ -40,7 +40,7 @@
       padding-left: 15px;
       margin-bottom: 10px;
       font: 500 22px/28px FuturaPT;
-      color: #30373D;
+      color: $main-black-color;
     }
 
     .product-card__price {
@@ -48,7 +48,7 @@
 
       &-old {
         font: 600 12px/14px FuturaPT;
-        color: rgba(48, 55, 61, .5);
+        color: $main-black-color-opacity-5;
         text-decoration-line: line-through;
         letter-spacing: .5px;
       }
@@ -56,22 +56,22 @@
       &-sale {
         padding: 4px 5px;
         font: 600 12px/14px FuturaPT;
-        color: #FF548C;
-        background-color: rgba(255, 84, 140, .2);
+        color: $main-color;
+        background-color: $main-color-opacity-2;
         border-radius: 13px;
       }
 
       &-total {
         font: 600 24px/28px FuturaPT;
-        color: #2C0952;
+        color: $third-color;
       }
     }
 
     .product-card__footer {
       padding: 10px;
-      border: 1px solid #EAEAEA;
+      border: 1px solid $gray-3;
       border-radius: 16px;
-      background: #F8F8F8;
+      background: $gray-light;
 
       &-top {
         padding: 0 0 0 5px;
@@ -80,26 +80,26 @@
       &-bottom {
         margin-top: 10px;
         padding: 10px 5px 0;
-        border-top: 1px solid rgba(234, 234, 234, .8);
+        border-top: 1px solid $gray-3-opacity-8;
 
         a {
           font: 500 16px/22px FuturaPT;
-          color: rgba(48, 55, 61, .4);
+          color: $gray-8-opacity-4;
           transition: color .3s;
 
           &:hover {
-            color: rgba(48, 55, 61, .8);
+            color: $gray-8-opacity-8;
           }
         }
 
         span {
-          color: #27CC00;
+          color: $green;
           border-bottom: 1px solid transparent;
           cursor: pointer;
           transition: color .3s;
 
           &:hover {
-            color: #5EF13B;
+            color: $green-2;
           }
 
           @include screen(xl) {
@@ -135,7 +135,7 @@
         width: 105px;
         text-align: center;
         border-radius: 8px;
-        background: #FFFFFF;
+        background: $white;
 
         img {
           width: 100%;
@@ -149,11 +149,9 @@
         overflow: hidden;
         width: 100%;
         padding-right: 30px;
-        /*  text-overflow: ellipsis; */
-        /*  -webkit-line-clamp: 2; */
         max-height: 50px;
         margin-bottom: 15px;
-        color: #30373D;
+        color: $main-black-color;
 
         @media (max-width: 375px) {
           width: 85%;
@@ -175,12 +173,12 @@
           text-align: right;
           font: 600 12px/14px FuturaPT;
           text-decoration-line: line-through;
-          color: rgba(48, 55, 61, .5);
+          color: $gray-8-opacity-5;
         }
 
         &-total {
           font: 600 24px/28px FuturaPT;
-          color: #2C0952;
+          color: $third-color;
         }
 
         &-sale {
@@ -188,8 +186,8 @@
           margin: 2px 0 0 0;
           text-align: center;
           font: 600 10px/12px FuturaPT;
-          color: #FF548C;
-          background-color: rgba(255, 84, 140, .2);
+          color: $main-color;
+          background-color: $main-color-opacity-2;
           border-radius: 13px;
         }
       }
@@ -197,11 +195,11 @@
       &__quantity {
         padding: 4px;
         width: 100px;
-        background: #FFFFFF;
-        border: 1px solid #ECECEC;
+        background: $white;
+        border: 1px solid $gray-12;
         font: normal 17px/20px Roboto;
-        color: #333333;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
+        color: $second-black-color;
+        box-shadow: 0px 4px 10px $black-opacity-05;
         border-radius: 16px;
 
         @include screen(xl) {
@@ -219,14 +217,14 @@
           width: 24px;
           height: 24px;
           border-radius: 50%;
-          background-color: rgba(39, 204, 0, .2);
+          background-color: $green-opacity-2;
           transition: background-color .3s;
 
           &:hover {
-            background-color: #27CC00;
+            background-color: $green;
 
             svg {
-              fill: #ffffff;
+              fill: $white;
             }
           }
         }
@@ -241,7 +239,7 @@
           width: 10px;
           height: 10px;
           display: block;
-          fill: #14D75D;
+          fill: $green-3;
           transition: fill .3s;
         }
       }
@@ -261,7 +259,7 @@
         svg {
           width: 20px;
           height: 20px;
-          fill: rgb(204, 204, 204);
+          fill: $gray-13;
           transition: opacity .3s;
         }
       }
@@ -278,7 +276,7 @@
         width: 70px;
         text-align: center;
         border-radius: 8px;
-        background: #FFFFFF;
+        background: $white;
 
         @include screen(xl) {
           display: none;
@@ -292,7 +290,7 @@
 
       &__name {
         margin-bottom: 5px;
-        color: #30373D;
+        color: $main-black-color;
 
         @include screen(xl) {
           font: normal 14px/26px Roboto;
@@ -306,7 +304,7 @@
 
       &__price {
         font: 600 18px/16px FuturaPT;
-        color: #27CC00;
+        color: $green;
 
         @include screen(l) {
           align-self: flex-end;
@@ -317,8 +315,8 @@
 
   &--accessories {
     padding: 15px;
-    background: #ffffff;
-    border: 1px solid #EAEAEA;
+    background: $white;
+    border: 1px solid $gray-3;
     border-radius: 10px;
 
     .product-card {
@@ -328,7 +326,7 @@
         margin-right: 15px;
         width: 110px;
         text-align: center;
-        background: #FFFFFF;
+        background: $white;
         mix-blend-mode: darken;
 
         img {
@@ -345,7 +343,7 @@
         -webkit-line-clamp: 2;
         max-height: 50px;
         margin-bottom: 15px;
-        color: #30373D;
+        color: $main-black-color;
 
         @include screen(xl) {
           font: normal 14px/26px Roboto;
@@ -364,20 +362,20 @@
           text-align: right;
           font: 600 12px/14px FuturaPT;
           text-decoration-line: line-through;
-          color: rgba(48, 55, 61, .5);
+          color: $gray-8-opacity-5;
         }
 
         &-total {
           font: 600 18px/26px FuturaPT;
-          color: #2C0952;
+          color: $third-color;
         }
 
         &-sale {
           padding: 3px 5px 2px;
           text-align: center;
           font: 600 10px/12px FuturaPT;
-          color: #FF548C;
-          background-color: rgba(255, 84, 140, .2);
+          color: $main-color;
+          background-color: $main-color-opacity-2;
           border-radius: 13px;
         }
       }
@@ -387,27 +385,27 @@
       padding: 5px 15px 7px;
       max-width: 125px;
       font: 600 14px/16px FuturaPT;
-      background: #27CC00;
-      box-shadow: 0px 3px 10px rgba(39, 204, 0, 0.35);
+      background: $green;
+      box-shadow: 0px 3px 10px $green-opacity-35;
 
       &:hover {
-        background: #5EF13B;
-        box-shadow: 0px 3px 20px rgba(67, 254, 22, 0.701841);
+        background: $green-2;
+        box-shadow: 0px 3px 20px $green-4;
       }
     }
   }
 
   &--active {
-    background: #F8F8F8;
+    background: $gray-light;
 
     .btn {
-      background: #ffffff;
-      color: rgba(43, 45, 48, 0.8);
+      background: $white;
+      color: $third-black-color-opacity-8;
       box-shadow: none;
 
       &:hover {
-        background: #ffffff;
-        color: rgba(43, 45, 48, 0.8);
+        background: $white;
+        color: $third-black-color-opacity-8;
         box-shadow: none;
       }
     }
