--- a/src/sass/components/_profile.scss
+++ b/src/sass/components/_profile.scss
@@ -1,7 +1,7 @@
 .profile {
   @include screen(xl) {
-    background: #FFFFFF;
-    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.1);
+    background: $white;
+    box-shadow: 0px 2px 12px $black-opacity-1;
     border-radius: 20px;
     padding: 15px 15px 20px;
   }
@@ -32,7 +32,7 @@
   /* title */
   .uk-accordion-title:hover,
   .uk-accordion-title:focus {
-    color: #2B2D30
+    color: $third-black-color;
   }
 
   li.uk-open {
@@ -59,7 +59,7 @@
         margin: auto;
         width: 25px;
         height: 25px;
-        background: url("../img/pic/ico/arrow-bottom-ico.svg") no-repeat, #E9E9E9;
+        background: url("../img/pic/ico/arrow-bottom-ico.svg") no-repeat, $gray-7;
         background-size: 10px 7px;
         background-position: center;
         border-radius: 50%;
@@ -80,7 +80,7 @@
 
     @include screen(l) {
       padding: 20px 30px 25px;
-      border-left: 1px solid rgba(0, 0, 0, .1);
+      border-left: 1px solid $black-opacity-1;
     }
   }
 
@@ -92,11 +92,11 @@
     margin: 0;
     border-bottom: 1px solid transparent;
     font: normal 14px/22px Roboto;
-    color: #FF548C;
+    color: $main-color;
     transition: border .3s;
 
     &:hover {
-      border-color: #FF548C;
+      border-color: $main-color;
     }
   }
 
@@ -111,7 +111,7 @@
   }
 
   &__region {
-    color: rgba(48, 55, 61, .7);
+    color: $gray-8-opacity-7;
 
     @include screen(xl) {
       font: normal 14px/22px Roboto;
@@ -140,31 +140,31 @@
 
   &__balance {
     padding: 15px 0;
-    border-top: 1px solid #EAEAEA;
+    border-top: 1px solid $gray-3;
 
     span {
       font: 600 18px/20px FuturaPT;
-      color: #FF548C;
+      color: $main-color;
     }
 
     button {
       width: 100%;
-      max-width: 180px;
+      max-width: 215px;
       padding: 5px 15px;
       border: 1px solid transparent;
       text-align: center;
       white-space: nowrap;
       font: 500 16px/22px FuturaPT;
-      color: #FF548C;
+      color: $main-color;
       border-radius: 8px;
-      background-color: #ffffff;
+      background-color: $white;
       transition: box-shadow .3s, color .1s, background-color .3s, border .3s;
-      border: 1px solid #FF548C;
+      border: 1px solid $main-color;
 
       &:hover {
-        color: #ffffff;
-        background-color: #FF548C;
-        box-shadow: 0px 3px 10px rgba(255, 84, 140, 0.4);
+        color: $white;
+        background-color: $main-color;
+        box-shadow: 0px 3px 10px $main-color-opacity-4;
         border-color: transparent;
       }
     }
@@ -172,7 +172,7 @@
 
   &__data {
     padding: 20px 0;
-    border-top: 1px solid #EAEAEA;
+    border-top: 1px solid $gray-3;
 
     li {
       &:not(:last-of-type) {
@@ -189,12 +189,12 @@
     display: inline-block;
     text-transform: uppercase;
     font: 600 12px/22px FuturaPT;
-    color: rgba(48, 55, 61, .8);
+    color: $gray-8-opacity-8;
   }
 
   &__offers {
     padding: 20px 0;
-    border-top: 1px solid #EAEAEA;
+    border-top: 1px solid $gray-3;
 
     .profile__subtitle {
       margin-bottom: 15px;
@@ -213,7 +213,7 @@
 
   &__referral {
     padding: 20px 0;
-    border-top: 1px solid #EAEAEA;
+    border-top: 1px solid $gray-3;
 
     .profile__subtitle {
       margin-bottom: 15px;
@@ -222,7 +222,7 @@
     &-link {
       padding: 5px 10px;
       margin-bottom: 15px;
-      background: #F2F2F2;
+      background: $gray-light-5;
       border-radius: 6px;
 
       .profile__referral-text {
@@ -230,22 +230,22 @@
         padding: 0;
         background: none;
         font: normal 14px/22px Roboto;
-        color: #FF548C;
+        color: $main-color;
       }
 
       .profile__referral-copy {
         cursor: pointer;
         font: normal 12px/14px Roboto;
-        color: rgba(48, 55, 61, .4);
+        color: $gray-8-opacity-4;
         transition: color .3s;
 
         &:hover {
-          color: #30373D;
+          color: $main-black-color;
         }
       }
 
       p {
-        color: rgba(48, 55, 61, .6);
+        color: $gray-8-opacity-6;
       }
     }
   }
