--- a/src/sass/components/_review.scss
+++ b/src/sass/components/_review.scss
@@ -2,7 +2,7 @@
   position: relative;
   border: 1px solid transparent;
   border-radius: 15px;
-  background-color: #F8F8F8;
+  background-color: $gray-light;
   transition: border-color .3s;
 
   @include screen(xl) {
@@ -14,7 +14,7 @@
   }
 
   &:hover {
-    border: 1px solid #EAEAEA;
+    border: 1px solid $gray-3;
   }
 
   img {
@@ -35,7 +35,7 @@
 
   &__name {
     font: 400 22px/26px FuturaPT;
-    color: #30373D;
+    color: $main-black-color;
 
     @include screen(xl) {
       margin-bottom: 5px;
@@ -51,7 +51,7 @@
     position: relative;
     padding-left: 15px;
     font: normal 14px/26px Roboto;
-    color: rgba(48, 55, 61, .9);
+    color: $gray-8-opacity-9;
 
     @include screen(xl) {
       order: 1;
@@ -69,7 +69,7 @@
       width: 7px;
       height: 7px;
       border-radius: 50%;
-      background-color: #c2c2c2;
+      background-color: $gray-14;
     }
 
     &--minus {
@@ -78,7 +78,7 @@
       padding-left: 15px;
 
       &::before {
-        background-color: #FF548C;
+        background-color: $main-color;
       }
     }
 
@@ -88,7 +88,7 @@
       padding-left: 15px;
 
       &::before {
-        background-color: #4bd964;
+        background-color: $green-5;
       }
     }
 
@@ -99,7 +99,7 @@
 
   &__date {
     font: normal 14px/22px Roboto;
-    color: rgba(48, 55, 61, .5);
+    color: $gray-8-opacity-5;
 
     @include screen(xl) {
       margin-bottom: 20px;
