--- a/src/sass/components/_seo-msk.scss
+++ b/src/sass/components/_seo-msk.scss
@@ -1,6 +1,6 @@
 .seo-msk {
-  box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
-  background-color: #fff;
+  box-shadow: 0px 2px 7px $black-opacity-05;
+  background-color: $white;
   overflow: hidden;
   border-radius: 20px;
 
@@ -10,7 +10,7 @@
 
   &__header {
     position: relative;
-    border-bottom: 1px solid #ECECEC;
+    border-bottom: 1px solid $gray-12;
     overflow: hidden;
 
     @include screen(xl) {
@@ -40,7 +40,7 @@
     position: relative;
     z-index: 1;
     display: block;
-    color: #333333;
+    color: $second-black-color;
 
     @include screen(xl) {
       margin-bottom: 20px;
@@ -65,7 +65,7 @@
     z-index: 1;
     display: block;
     font: normal 18px/28px Roboto;
-    color: rgba(255, 84, 140, .9);
+    color: $main-color-opacity-9;
   }
 
   &__text {
@@ -73,7 +73,7 @@
     z-index: 1;
     font: 500 14px/16px FuturaPT;
     text-transform: uppercase;
-    color: rgba(51, 51, 51, .3);
+    color: $dark-gray-opacity-3;
     pointer-events: none;
 
     @include screen(xl) {
@@ -129,7 +129,7 @@
 
     .swiper-pagination-bullet-active {
       opacity: 1;
-      background: #FF548C;
+      background: $main-color;
     }
   }
 
@@ -137,7 +137,7 @@
     padding: 20px;
     border: 1px solid transparent;
     border-radius: 15px;
-    background: #F8F8F8;
+    background: $gray-light;
     overflow: hidden;
     transition: border-color .3s;
 
@@ -149,7 +149,7 @@
     }
 
     &:hover {
-      border: 1px solid #EAEAEA;
+      border: 1px solid $gray-3;
     }
 
     &:not(:last-of-type) {
@@ -165,12 +165,12 @@
         &:first-of-type {
           margin-bottom: 5px;
           font: 500 22px/26px FuturaPT;
-          color: #30373D;
+          color: $main-black-color;
         }
 
         &:last-of-type {
           font: normal 14px/22px Roboto;
-          color: rgba(48, 55, 61, .5);
+          color: $main-black-color-opacity-5;
         }
       }
     }
@@ -181,7 +181,7 @@
 
     p {
       font: normal 14px/26px Roboto;
-      color: rgba(48, 55, 61, .9);
+      color: $main-black-color-opacity-9;
     }
   }
 }
