--- a/src/sass/components/_seo.scss
+++ b/src/sass/components/_seo.scss
@@ -73,7 +73,7 @@
     }
 
     p {
-      color: #30373D;
+      color: $main-black-color;
 
       @include screen(xl) {
         margin-bottom: 20px;
@@ -103,7 +103,7 @@
           margin: auto;
           width: 3px;
           height: 140px;
-          background-color: #E9E9E9;
+          background-color: $gray-7;
           border-radius: 10px;
         }
       }
@@ -112,7 +112,7 @@
         position: relative;
         padding-left: 25px;
         font: normal 18px/21px FuturaPT;
-        color: #30373D;
+        color: $main-black-color;
 
         &:not(:last-of-type) {
           @include screen(xl) {
@@ -131,7 +131,7 @@
           top: 7px;
           width: 8px;
           height: 8px;
-          background-color: #F8355E;
+          background-color: $main-dark-color;
           border-radius: 50%;
         }
       }
@@ -141,15 +141,15 @@
   &__features {
     padding: 20px 30px;
     background: #FFFFFF;
-    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 2px 7px $black-opacity-05;
     border-radius: 10px;
-    color: #30373D;
+    color: $main-black-color;
 
     li {
       padding: 10px 30px;
 
       &:not(:last-of-type) {
-        border-right: 3px solid #E9E9E9;
+        border-right: 3px solid $gray-7;
       }
     }
 
