--- a/src/sass/components/_tooltip.scss
+++ b/src/sass/components/_tooltip.scss
@@ -4,7 +4,7 @@
   a {
     display: inline-block;
     font: normal 16px/18px FuturaPT;
-    color: rgba(48, 55, 61, 0.8);
+    color: $main-black-color-opacity-8;
     cursor: pointer;
 
     br {
@@ -20,8 +20,8 @@
 
   &-content {
     position: absolute;
-    background: #FFFFFF;
-    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
+    background: $white;
+    box-shadow: 0px 5px 20px $black-opacity-15;
     border-radius: 6px;
     pointer-events: none;
     opacity: 0;
@@ -49,7 +49,7 @@
         left: 160px;
         border: 8px solid transparent;
         border-top: none;
-        border-bottom: 8px solid #ffffff;
+        border-bottom: 8px solid $white;
         z-index: 11;
         transform: translateX(-50%);
       }
@@ -60,7 +60,7 @@
         bottom: -8px;
         border: 8px solid transparent;
         border-top: none;
-        border-bottom: 8px solid #ffffff;
+        border-bottom: 8px solid $white;
         z-index: 1;
         transform: translateX(-50%) rotate(180deg);
       }
