--- a/src/sass/layout/_question.scss
+++ b/src/sass/layout/_question.scss
@@ -77,6 +77,12 @@
         max-width: 300px;
       }
     }
+
+    &__title {
+      @include screen(xl) {
+        margin-left: 30px;
+      }
+    }
   }
 
   .btn {
